Add my personal bio to aside

--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
     </div>
     <aside>
         <h2>New aside</h2>
+		<p>
+		<h3>My bio</h3>
+		I am Ahmed KHABER i am a professional web developper
     </aside>
 
 </body>
