Add footer to main page

--- a/index.html
+++ b/index.html
@@ -21,10 +21,15 @@
     </div>
     <aside>
         <h2>New aside</h2>
-		<p>
-		<h3>My bio</h3>
-		I am Ahmed KHABER i am a professional web developper
+            <p>
+            <h3>My bio</h3>
+            I am Ahmed KHABER i am a professional web developper
+            </p>
     </aside>
+    <footer>
+        <h2>Rights</h2>
+	    All rights reserved@
+    </footer>
 
 </body>
 </html>
